# showcase-site

./: .babelrc  .gitignore  README.md  build.sh  ingest_historical.py  ingest_live.py  package-lock.json  package.json  pyproject.toml  webpack.config.js
api/: api.py  app.py  db.py  ingest_historical.py  ingest_live.py  schema.py
migrations/: 2024_03_27_m1.sql  2024_03_29_m1.sql
src/: About.js  Home.js  Match.js  NoPage.js  Player.js  Players.js  Team.js  Teams.js  helpers.js  index.css  index.js  secrets.js
templates/: index.html
websocket/: server.py
